<resources>
    <string name="app_name">ModuleOne</string>
    <string name="tv_fds">Enter FDs</string>
    <string name="tv_R">Enter R</string>
    <string name="tv_ckSet">Candidate Keys:</string>
    <string name="tv_HNF">Highest Normal Form:</string>
    <string name="tv_HNFResult">HNF</string>
    <string name="pt_Lfd">AB</string>
    <string name="pt_Rfd">CD</string>
    <string name="pt_R">ABC</string>
    <string name="align_center">CENTER_HORIZONTAL</string>
<!--    <string name="align_middle">CENTER_VERTICAL</string>-->
    <string name="button_nextFD">Next</string>
    <string name="button_Decompose">Decompose</string>
    <string name="button_finish">Finish</string>
    <string name="button_clear">Clear FD\'s</string>
    <string name="tv_Arrow">-></string>
    <string name="tv_close">Closure</string>
</resources>
