<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreNormalisationActivity">

    <!--    <TextView-->
    <!--        android:id="@+id/tv_closure"-->
    <!--        android:layout_width="289dp"-->
    <!--        android:layout_height="118dp"-->
    <!--        android:layout_marginStart="96dp"-->
    <!--        android:text="@string/tv_closure"-->
    <!--        android:textAppearance="@style/TextAppearance.AppCompat.Large"-->
    <!--        android:visibility="visible"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/tv_ckSet"-->
    <!--        app:layout_constraintVertical_bias="0.825" />-->

    <TextView
        android:id="@+id/tv_HNFResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/tv_HNFResult"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_HNF" />

    <TextView
        android:id="@+id/tv_HNF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_HNF"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv" />

    <TextView
        android:id="@+id/tv_ckSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/tv_ckSet"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onDecompose"
        android:text="@string/button_Decompose"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_HNFResult"
        app:layout_constraintVertical_bias="0.625" />

    <ListView
        android:id="@+id/lv"
        android:layout_width="194dp"
        android:layout_height="140dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ckSet" />


</androidx.constraintlayout.widget.ConstraintLayout>